--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   border-bottom: 1px solid #f2f2f2;
 }
 .navbar h1 {
-  color: #f1356d;
+  color: #35f1e8;
 }
 .navbar .links {
   margin-left: auto;
@@ -26,7 +26,7 @@
   padding: 6px;
 }
 .navbar a:hover {
-  color: #f1356d;
+  color: #35f1e8;
 }
 .content {
   max-width: 600px;
@@ -34,6 +34,7 @@
   padding: 20px;
 }
 
+/* blog previews / list */
 .blog-preview {
   padding: 10px 16px;
   margin: 20px 0;
@@ -42,8 +43,9 @@
 .blog-preview:hover {
   box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
 }
+
 .blog-preview h2 {
   font-size: 20px;
-  color: #f1356d;
+  color: #35f1e8;
   margin-bottom: 8px;
 }
