--- a/src/index.css
+++ b/src/index.css
@@ -62,14 +62,15 @@
 .blog-details div {
   margin: 20px 0;
 }
-/*.blog-details button {
+.blog-details button {
   background: #5006b9;
   color: #fff;
   border: 0;
   padding: 8px;
   border-radius: 8px;
   cursor: pointer;
-}*/
+}
+
 /* create new blog form */
 .create {
   max-width: 400px;
