--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   border-bottom: 1px solid #f2f2f2;
 }
 .navbar h1 {
-  color: #35f1e8;
+  color: #00c9bf;
 }
 .navbar .links {
   margin-left: auto;
@@ -26,7 +26,7 @@
   padding: 6px;
 }
 .navbar a:hover {
-  color: #35f1e8;
+  color: #00c9bf;
 }
 .content {
   max-width: 600px;
@@ -46,7 +46,7 @@
 
 .blog-preview h2 {
   font-size: 20px;
-  color: #35f1e8;
+  color: #00c9bf;
   margin-bottom: 8px;
 }
 
@@ -83,7 +83,7 @@
 }
 .create h2 {
   font-size: 20px;
-  color: #f1356d;
+  color: #5006b9;
   margin-bottom: 30px;
 }
 .create input, .create textarea, .create select {
@@ -95,7 +95,7 @@
   display: block;
 }
 .create button {
-  background: #f1356d;
+  background: #5006b9;
   color: #fff;
   border: 0;
   padding: 8px;
